--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wev eveloper Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Overpass&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header> 
-
+<body class="josefin-sans-normal">
+    <header class="header"> 
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="#">Portfolio</a></li>
+                <li><a class="dark-2" href="#">Blog</a></li>
+                <li><a href="#"><button class="btn-primary">Hire Me</button></a></li>
+            </ul>  
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                 <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                 <h1 class="banner-title">Mary Hardy</h1>
+                 <p class="banner-description">Shot what able cold new see hold. Friendly as an betrayed formerly he. Morning because as to society behave contents</p>
+                 <button class="btn-primary">Download CV</button>
+                 <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
 
     <main>
