--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="josefin-sans-normal">
-    <header class="header"> 
+
+    <header class="header secondary-bg"> 
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -33,6 +34,76 @@
 
     <main>
 
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I am a passionate designer with a keen eye for detail and a love for creative problem-solving. My approach blends aesthetics with functionality, ensuring every project is both visually appealing and user-friendly. I enjoy transforming ideas into engaging digital experiences that leave a lasting impression.
+            </p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">abasdb@gmail.com</p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-title">Date of birth</p>
+                    <p class="item-description">Dec 16, 2000</p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka,BD</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- what is do section start  -->
+
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">
+                With over 10 years of experience in web development, I specialize in creating responsive, user-friendly websites and applications. My expertise spans front-end and back-end technologies, enabling me to deliver complete solutions that meet client needs. I am dedicated to continuous learning and staying updated with the latest industry trends to ensure high-quality, modern digital experiences.
+            </p>
+
+            <div class="skills-container">
+                
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla javascript</h4>
+                    <p class="skill-description">
+                        I use vanilla JavaScript to build interactive, dynamic web applications without relying on frameworks, ensuring fast performance, flexibility, and a deep understanding of core web technologies.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">
+                        I leverage React to build scalable, component-based user interfaces, enabling efficient updates, reusable code, and seamless user experiences for modern web applications and projects.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">
+                        I utilize Node.js to build fast, scalable server-side applications, enabling real-time data processing, RESTful APIs, and seamless integration with databases for robust web solutions.
+                    </p>
+                </div>
+
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">
+                        I use MongoDB to design flexible, scalable databases for modern applications, enabling efficient data storage, retrieval, and management with powerful querying and aggregation capabilities.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
