--- a/index.html
+++ b/index.html
@@ -104,10 +104,99 @@
                 </div>
             </div>
         </section>
+<!-- what is do section end  -->
+
+      <!-- resume start  -->
+        <section class="resume">
+            <h3 class="section-title text-center">
+                A summary of My Resume
+            </h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/ 2015-2017</h5>
+                        <div class="experience-description">
+                            Completed a rigorous curriculum focused on advanced algorithms, distributed systems, and software engineering. Developed strong problem-solving skills and participated in collaborative research projects.
+                        </div> 
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/ 2015-2017</h5>
+                        <div class="experience-description">
+                            Completed a rigorous curriculum focused on advanced algorithms, distributed systems, and software engineering. Developed strong problem-solving skills and participated in collaborative research projects.
+                        </div> 
+                    </div>
+                    <hr>
+                   <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/ 2015-2017</h5>
+                        <div class="experience-description">
+                            Completed a rigorous curriculum focused on advanced algorithms, distributed systems, and software engineering. Developed strong problem-solving skills and participated in collaborative research projects.
+                        </div> 
+                    </div>
+                </div>
+
+
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Front End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description">As a Senior Front End Developer, I lead UI development, optimize performance, mentor junior staff, and collaborate with cross-functional teams to deliver seamless user experiences.</div>  
+                    </div>
+
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Front-End Developer</h4>
+                        <h5 class="experience-sub-title">Dribble Inc / 2018 - 2022</h5>
+                        <div class="experience-description">As a Senior Front End Developer, I lead UI development, optimize performance, mentor junior staff, and collaborate with cross-functional teams to deliver seamless user experiences.</div>
+                    </div>
+
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adove Inc / 2017 - 2018</h5>
+                        <div class="experience-description">As a Senior Front End Developer, I lead UI development, optimize performance, mentor junior staff, and collaborate with cross-functional teams to deliver seamless user experiences.</div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+        <!-- resume end  -->
     </main>
 
-    <footer>
-        
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Let`s Connect</h3>
+            <p>
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8:00
+P.M ET, Monday through Friday            </p>
+<div>
+    <a href="#"><img src="images/icons/facebook.png" alt=""></a>
+    <a href="#"><img src="images/icons/insta.png" alt=""></a>
+    <a href="#"><img src="images/icons/twitter.png" alt=""></a>
+</div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">
+                Let`s Inbox me
+            </h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="30" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
