added some icons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wev eveloper Portfolio</title>
+    <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Overpass&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- font awesome  link-->
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+     <!-- style links  -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="josefin-sans-normal">
@@ -25,8 +29,8 @@
                  <h4 class="banner-greetings dark-2">Hi, I am</h4>
                  <h1 class="banner-title">Mary Hardy</h1>
                  <p class="banner-description">Shot what able cold new see hold. Friendly as an betrayed formerly he. Morning because as to society behave contents</p>
-                 <button class="btn-primary">Download CV</button>
-                 <button class="btn-primary">Contact</button>
+                 <button class="btn-primary"> <i class='bx bx-download' ></i> Download CV</button>
+                 <button class="btn-primary"> <i class='bx bxs-contact' ></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -168,7 +172,7 @@
             </div>
 
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class='bx bx-download' ></i> Download CV</button>
             </div>
         </section>
         <!-- resume end  -->
